Revisado prefacio.tex
CAMBIOS:
-Distinta organización
-Añadida introdución
-Cambios en algún apartado

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -11,6 +11,17 @@ title = {Página oficial de {VM}ware},
 howpublished={\url{http://www.vmware.com/es/}},
 }
 
+@misc{git,
+title = {Página oficial del control de versiones git},
+howpublished={\url{http://git-scm.com/}}‎,
+}
+
+@misc{repositorio,
+title = {Repositorio de trabajo para el desarrollo de la memoria},
+howpublished={\url{https://github.com/KekoAlk/Practica\_DAS}},
+}
+
+
 @misc{vmwareinst,
 title = {Guía de instalación de {VM}ware {W}orkstation 5.5},
 howpublished={\url{https://www.vmware.com/support/ws55/doc/ws_newguest_setup_simple_steps.html}},
