Revisado capítulo 1 - Parte II
Revisado el primer capítulo de la segunda parte.

NO he prestado mucha atención a las faltas, se ha podido colas alguna.

--- a/memoria/figuras.tex
+++ b/memoria/figuras.tex
@@ -18,7 +18,7 @@
 		{virtualizacionhost}{\maquinavir{0.3}{0.4} \maquinavir{0.3}{0.4} \maquinavir{0.3}{0.4} \virtualizacionHost}
 		{vmware}{\fbox{\parbox{70mm}{\textcolor{red}{ESTA FIGURA HAY QUE HACERLA\\ ES COMO LA ÚLTIMA PERO LAS VM ESTAN EL EL SERVIDOR}}}}
 	% PARTE II %
-		{3}{\pizarra}
+		{pizarra}{\pizarra}
 	}[\PackageError{figura}{Figura no declarada: #1}{}]
 }
 
