Arreglada diagrama de actividad crear_usuario

--- a/memoria/diagramas/diag_actividad/crear_usuario.tex
+++ b/memoria/diagramas/diag_actividad/crear_usuario.tex
@@ -41,7 +41,7 @@
 \umltrans{crear}{actualizar}
 \umltrans{actualizar}{notificar}
 \umltrans{notificar}{final}
-\umltrans{check}{actualizar}
+\umltrans{check}{notificar}
 \umlHVHtrans[arg1=Datos inválidos, arm1=4cm,pos1=0.4]{validos}{notificar}
 
 \end{tikzpicture}
