--- a/memoria/diagramas/diag_casos.tex
+++ b/memoria/diagramas/diag_casos.tex
@@ -1,4 +1,45 @@
 %Diagrama de casos de uso
+
+\newcommand{\casosdeuso}{
+\begin{tikzpicture}
+\umlusecase[name=configPizarra]{Configurar pizarra}
+\umlusecase[y=-1, name=crearCarpeta]{Crear carpeta}
+\umlusecase[y=-2, name=buscar]{Buscar}
+\umlusecase[y=-3, name=comparar]{Comparar}
+\umlusecase[x=2, y=3, name=actualizarEstado]{Actualizar estado}
+\umlusecase[x=2, y=1, name=mostrarEstado]{Mostrar estado}
+\umlusecase[x=8, y=1, name=escribir]{Escribir (in)}
+\umlusecase[x=8, y=0, name=leer]{Leer (out)}
+\umlusecase[x=8, y=-1, name=rd]{Escritura/Lectura (rd)}
+\umlusecase[x=8, y=-2.5, name=gestionarPermisos]{Gestionar permisos}
+\umlusecase[x=14, y=-5, name=nivel]{Comprobar Nivel}
+
+\umlactor[x=3, y=-2]{PIZARRA}
+\umlactor[x=13, y=0]{AGENTE}
+
+\umlinclude{mostrarEstado}{actualizarEstado}
+\umlinclude{configPizarra}{actualizarEstado}
+\umlinclude{rd}{actualizarEstado}
+\umlinclude{leer}{actualizarEstado}
+\umlinclude{escribir}{actualizarEstado}
+\umlextend{escribir}{nivel}
+\umlextend{leer}{nivel}
+\umlextend{nivel}{gestionarPermisos}
+\umlextend{rd}{nivel}
+\umlassoc{AGENTE}{escribir}
+\umlassoc{AGENTE}{leer}
+\umlassoc{AGENTE}{rd}
+\umlassoc{PIZARRA}{comparar}
+\umlassoc{PIZARRA}{buscar}
+\umlassoc{PIZARRA}{crearCarpeta}
+\umlassoc{PIZARRA}{configPizarra}
+\umlassoc{PIZARRA}{mostrarEstado}
+\umlassoc{PIZARRA}{gestionarPermisos}
+\umlassoc{PIZARRA}{mostrarEstado}
+\umlassoc{PIZARRA}{nivel}
+\end{tikzpicture}
+}
+
 \newcommand{\casos}{
 \begin{tikzpicture}
 \tikzumlset{font=\tiny}
