Revisado capítulo 2 - Parte II

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -11,6 +11,11 @@ title = {Página oficial de {VM}ware},
 howpublished={\url{http://www.vmware.com/es/}},
 }
 
+@misc{discusionaplicacion,
+title = {Issue de discusión del repositorio de la práctica sobre las posibles aplicaciones y requisitos,
+howpublished={\url{https://github.com/KekoAlk/Practica_DAS/issues/14}},
+}
+
 @misc{git,
 title = {Página oficial del control de versiones git},
 howpublished={\url{http://git-scm.com/}}‎,
