Corrección errores ortográficos

--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -49,7 +49,7 @@ Algunos de los hipervisores tipo 2 más utilizados son: Oracle: VirtualBox, Virt
 \section{Componentes}
 En las figuras mostradas anteriormente, se han hecho referencias a \emph{hardware}, \emph{\gloss{{HYP}}} o \emph{\gloss[long]{MAQVIR}} en las que no explicamos exactamente que significa y por ello, ahora, vamos a analizar cada uno de estas partes descomponiendo sus componentes; es decir, qué elementos lo forman, para después poder juntarlos todos y obtener una idea real de la arquitectura.\\
 
-Siguiendo un órden de menor a mayor nivel, comenzaremos con el \emph{hardware} para terminar con las distintas \emph{VMs}.
+Siguiendo un orden de menor a mayor nivel, comenzaremos con el \emph{hardware} para terminar con las distintas \emph{VMs}.
 
 \subsection{Hardware o Hardware real}
 Quizás lo primero que tengamos que hacer es explicar el encabezado del apartado, ¿Por qué \emph{\textquotedblleft hardware real\textquotedblright}?.\\
