--- a/memoria/partes/a/capitulo3.tex
+++ b/memoria/partes/a/capitulo3.tex
@@ -67,7 +67,7 @@ El funcionamiento de VMware es simple, vamos a detallar el proceso que sigue un 
 \item Se inicia automáticamente la aplicación de VMware.
 \item En la aplicación se introducen los datos de la máquina virtual (para saber cuál escoger entre todas las disponibles en el servidor).
 \item El servidor le devuelve la información a la aplicación.
-\item Se inicia la mauina virtual.
+\item Se inicia la maquina virtual.
 \item Se pide el usuario y contraseña, cómo un ordenador normal, pero en este caso serán los valores que se usan para todas las cuentas de la URJC.
 \item El ordenador esta listo para su uso.
 \end{enumerate}
