Corrección de faltas en el prefacio

--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -1,7 +1,7 @@
 \chapter*{Prefacio}
 \addcontentsline{toc}{chapter}{Prefacio}
 
-\lettrine[lines=1,slope=4pt,findent=0pt]{D}{}urante la realización esta práctica, se han tenido o hemos tenido una serie de pautas o condiciones; por ellos nos gustaría relatar brevemente cuáles han sido dichas pautas y cómo han afectado al desarrollo de la práctica.
+\lettrine[lines=1,slope=4pt,findent=0pt]{D}{}urante la realización esta práctica, se han seguido una serie de pautas o condiciones; por ello nos gustaría relatar brevemente cuáles han sido dichas pautas y cómo han afectado al desarrollo de la práctica.
 
 
 \section*{Objetivos y motivaciones}
@@ -9,7 +9,7 @@ En ocasiones, para los distintos y diversos ámbitos que recoge la informática,
 
 Por ello, sería interesante buscar y conocer una arquitectura de software que permita a un computador escoger entre más de un sistema operativo que trabaje a un nivel óptimo. Esta arquitectura se conoce como \emph{arquitectura de virtualización}.\\
 
-En otro ámbito, pero centrándonos más en las llamadas arquitecturas software; se suele hablar de éstas arquitecturas en cuanto al diseño de productos software se refiere, en asignaturas destinadas a tal efecto; pero, \emph{¿Cómo implmento una aplicación con una cierta arquitectura?}, \emph{¿Es posible implementar una arquitectura de una forma genérica?} y \emph{¿Se podría crear una interfaz con una arquitectura software y utilizarla en varios productos software?}.\\
+En otro ámbito, pero centrándonos más en las llamadas arquitecturas software; se suele hablar de éstas arquitecturas en cuanto al diseño de productos software se refiere, en asignaturas destinadas a tal efecto; pero, \emph{¿Cómo implemento una aplicación con una cierta arquitectura?}, \emph{¿Es posible implementar una arquitectura de una forma genérica?} y \emph{¿Se podría crear una interfaz con una arquitectura software y utilizarla en varios productos software?}.\\
 
 Por tanto, los objetivos de esta práctica pasan por satisfacer estas dudas e inquietudes, es decir:
 \begin{itemize}
@@ -30,16 +30,16 @@ Es necesario destacar, que estas partes han sido estrictamente obtenidas del enu
 
 Para la realización de esta práctica, uno de los pilares fundamentales ha sido la manera en la que nos hemos organizado.\\
 
-Básicamente y en gran parte debido a las fechas en las que había que realizar la práctica, decidimos probar algo nuevo para nosotros pero que ya conocíamos de oídas: realizar la práctica de una manera distribuida. Por ello uno de los primeros pasos fue buscar alguna herramienta que nos permitiera este tipo de trabajo, entre las opciones se enconraban: dropbox, google drive, google code o GitHub.\\
+Básicamente y en gran parte debido a las fechas en las que había que realizar la práctica, decidimos probar algo nuevo para nosotros pero que ya conocíamos de oídas: realizar la práctica de una manera distribuida. Por ello uno de los primeros pasos fue buscar alguna herramienta que nos permitiera este tipo de trabajo, entre las opciones se encontraban: dropbox, google drive, google code o GitHub.\\
 
-La elección dependía de cómo fuéramos a afrontar la práctica, es decir, si decidiamos que cada uno se encargará de una cosa, seguramente \emph{Dropbox} hubiera sido la mejor opción, pero al ser gran cantidad de contenido decidimos que lo mejor sería ir mirando poco a poco que era necesario hacer.\\
+La elección dependía de cómo fuéramos a afrontar la práctica, es decir, si decidíamos que cada uno se encargará de una cosa, seguramente \emph{Dropbox} hubiera sido la mejor opción, pero al ser gran cantidad de contenido decidimos que lo mejor sería ir mirando poco a poco que era necesario hacer.\\
 
 Por este motivo también, un simple archivo \emph{*.doc} no nos valía, ya que \emph{¿Qué sucede si escribimos los dos a la vez?}.\\
 
 Por todos ello el resultado de una tarde de organización fue realizar la memoria de la práctica en lenguaje \LaTeX~ en un repositorio en GitHub\cite{repositorio}.
 
 \subsection*{¿Por qué GitHub?}
-Esta plataforma junto con el control de versiones git\cite{git} nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso y mediante el cuál podíamos compartir nuestras dudas y sugerencias y trabajar cada uno a su aire, sin estar limitado a una repartición de trabajo; si nos atascabamos en una cosa, podíamos continuar con otra sin problemas porque todos teníamos el control sobre el estado actual de la práctica.\\
+Esta plataforma junto con el control de versiones git\cite{git} nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso y mediante el cuál podíamos compartir nuestras dudas y sugerencias y trabajar cada uno a su aire, sin estar limitado a una repartición de trabajo; si nos atascábamos en una cosa, podíamos continuar con otra sin problemas porque todos teníamos el control sobre el estado actual de la práctica.\\
 
 Hemos elegido usar GitHub por los siguientes motivos:
 \begin{itemize}
