Corrección de faltas adicionales

--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -31,7 +31,7 @@ Al igual que antes, encontramos diversas acepciones de \emph{\gloss{MAQVIR}}, pe
 \end{flushright}
 \end{quote}
 
-O lo que es lo mismo, un programa o aplicación software que simula de manera total o parcial una computadora de manera que el usuario final no note la diferencia.\\
+O lo que es lo mismo, un programa o aplicación software que simula de manera total o parcial una computadora de forma que el usuario final no note la diferencia.\\
 
 Podemos encontrar dos tipos de éstas dependiendo de cómo se ejecuten en el sistema:
 
