--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -55,7 +55,7 @@ Implica que no existe interrelación entre los agentes, sólo a través de la pi
 Por otro lado, se nos dice en el enunciado que esta pizarra tendrá la característica de que se implementara siguiendo un modelo cliente-servidor, es decir: Debe estar preparada para poder crear la pizarra en un computador y cada agente en otro, conectados a través de la red, esto no quiere decir que en un mismo ordenador no s puedan ejecutar una aplicación cliente y otra servidor, al contrario, en caso de implementar algo de código la manera de probarlo sería de esta manera.
 
 \section{¿Cómo va a ser la plataforma?}
-Nuestra plataforma irá destinada a la interacción de distintos agentes que podrán subir y modificar archivos a través de la pizarra, con tres operaciones báscicas: Escribir(\textbf{in}), Leer(\textbf{out}) y escribir sin eliminar(\textbf{rd}).\\
+Nuestra plataforma irá destinada a la interacción de distintos agentes que podrán subir y modificar archivos a través de la pizarra, con tres operaciones básicas: Escribir(\textbf{in}), Leer(\textbf{out}) y escribir sin eliminar(\textbf{rd}).\\
 
 La plataforma constará de dos partes:
 \begin{itemize}
