--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -6,7 +6,7 @@ Para abordar la documentación de la plataforma ha sido necesario obtener previa
 Ahora centrémonos en cómo hemos obtenido esos requisitos y a que conclusiones hemos llegado.
 
 \section{Obtención de los requisitos}
-Para abordar la obtención de los requisitos, y debido a que obtener los requisitos de la plataforma de la qué no teniamos una idea muy clara y concisa de su funcionalidad, hemos partido de una posible aplicación que pudiera ser implementada con nuestra librería para así poder buscar su funcionalidad, es decir, hacernos una idea clara de qué debería llevar y a partir de ahí, obtener tanto los requisitos de esta posible aplicación como separarlos y extrapolarlos a la librería.\\
+Para abordar la obtención de los requisitos, y debido a que obtener los requisitos de la plataforma de la qué no teníamos una idea muy clara y concisa de su funcionalidad, hemos partido de una posible aplicación que pudiera ser implementada con nuestra librería para así poder buscar su funcionalidad, es decir, hacernos una idea clara de qué debería llevar y a partir de ahí, obtener tanto los requisitos de esta posible aplicación como separarlos y extrapolarlos a la librería.\\
 
 La aplicación que tomamos como referencia para la extracción de requisitos permite a un profesor, así como a sus alumnos subir y modificar archivos en una pizarra externa, permitiendo así la cómoda realización de trabajos en grupo por parte de los alumnos y un seguimiento por parte del profesor.\\
 
@@ -21,7 +21,7 @@ Una vez extraídos los requisitos es necesario clarificarlos, ya que no todos ha
 	\begin{itemize}
 		\item\textbf{Del producto:} Especifican el comportamiento del producto, por ejemplo fiabilidad o rapidez.
 		\item\textbf{Organizacionales:} Derivan de políticas y procedimientos existentes en la organización del cliente y del desarrollador, por ejemplo la utilización de un lenguaje de programación en concreto.
-		\item\textbf{Requisitos externos:} Se derivan de factores externos al sistema y a su proceso de desarrollo, por ejemplo requisitos de interoperatividad, la capacidad de interambiar información de un sistema, o éticos, como el cumplimiento de normativas.
+		\item\textbf{Requisitos externos:} Se derivan de factores externos al sistema y a su proceso de desarrollo, por ejemplo requisitos de interoperatividad, la capacidad de intercambiar información de un sistema, o éticos, como el cumplimiento de normativas.
 	\end{itemize}
 \end{itemize}
 
