--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -1,6 +1,6 @@
 \chapter{Arquitectura y Diseño}
 
-\lettrine[lines=1,slope=4pt,findent=0pt]{I}{}ntroduccion
+\lettrine[lines=1,slope=4pt,findent=0pt]{I}{}ntroducción
 
 
 \section{Modelado UML}
